added choose planet state